StyleSheets/MainStyleGeneral.css
/*настройка body */
.body_style{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1440px;
    width: 100%;
    margin: 0 auto;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}     
/* хэдер */
.menu{
    display: flex;
    justify-content: space-around;
    max-width: 1200px;
    width: 100%;    
    border-bottom: 1px solid #d8d8d8;
}
.navigation{
    display: flex;
    vertical-align: middle;
    justify-content: space-around;
    max-width: 710px;
    width: 100%;
   
}
.navigation ul{
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center; 
    flex-wrap: wrap;
    list-style: none;   
    flex-grow: 1;   
    padding-left: 10%;      
}
.navigation ul li{
    margin: 0px 3%;
}
.logo{
    text-align: center;
    max-width: 200px;
    width: 100%;    
}
.menu_btn{ 
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    max-width: 290px;
    width: 100%;   
}
.login{
    background-color: #16133E;  
    color: #FFF;  
}
.sign_up{
    background-color: #FFF; 
    color: #16133E;   
}
.menu_btn button{
    max-width: 110px;
    width: 100%;
    max-height: 50px;
    height: 100%;
    margin: 0px 3%; 
    border: 2px solid #16133E;
    font-weight: 600;
    border-radius: 8px; 
}
/*main блок*/
.main_style{
    max-width: 1200px;
    width: 100%;
    padding-top: 50px;
}
/*банер*/
.banner{ 
    display: flex;
    justify-content: space-between;
    max-width: 1200px;
    min-height: 420px;   
    margin-bottom: 120px;
}
.text_content{
    display: flex;
    flex-wrap: wrap;
    max-width: 440px;
    width: 100%;
}
.text_content h1{   
    margin: 0; 
    font-size: 68px;
    font-weight: 400;
    line-height: 70px;    
}
.paragraph{
    font-size: 16px;
    font-weight: 400;
}
.banner_buttons{
    height: 50px;    
    margin-right: 3%;
    border-radius: 8px;
}
.get_now{
    width: 39%;
    border: 2px solid #007FFC;
    background-color: #007FFC;
    color: #FFF;
}
.learn_more{
    width: 35%;
    border: 2px solid #007FFC;
    background-color: #FFF;
    color: #007FFC;
}
.banner_scrl{
    position: relative;
    max-width: 630px;
    width: 100%;
}
.banner_img{
    position: absolute;
    left: 4%;
    max-width: 580px;
    max-height: 420px;
    height: 100%;
    width: 100%;
    border-radius: 8px;
}
.scroll_buttons{
    position: absolute;
    top: 45%;
    max-width: 55px;    
}
.scroll_right{
    left: 91.5%;
}
/* сервисы */
.service{
    display: flex;
    flex-direction: column;
    max-width: 1200px;
    min-height: 520px;
    margin-bottom: 120px;    
}
.h1_like{
    margin: 0px;
    font-size: 52px;
    font-weight: 400;    
}
.service ul{
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;     
    padding: 0px;
    margin-top: 30px;
    list-style: none;      
}
.service ul li{
    max-width: 280px;
    min-height: 270px;
    padding: 40px;  
    border: 1px solid #E5EAF4;
    border-radius: 8px; 
    margin-top: 25px;
    margin-right: 52px;
}
.service ul li:nth-child(3n){
    margin-right: 0px;
}
.service_img{
    box-sizing: border-box;
    max-width: 66px;
    max-height: 66px;
    padding: 5px;
    border: 1px solid #E5EAF4;
    border-radius: 16px;
}
/* приложения */
.app{
    max-width: 1200px;
    min-height: 700px;
    margin-bottom: 120px;
}
.app_container{
    display: flex;
    justify-content: space-between;
    align-content: flex-start;
    flex-wrap: wrap;
    max-width: 1200px;
    min-height: 485px;
}
.app_img{ 
    position: relative;
    width: 555px;
    height: 485px;  
    margin-top: 60px;
}
.app_img_size{
    max-width: 555px;
    height: 485px;
    border-radius: 8px;
}
.app_img_txt{
    position: absolute;
    top: 285px;
    left: 32px;
    max-width: 490px;
    height: 100px;
    color: #FFF;
    font-size: 36px;
    font-weight: 500;
    text-shadow: 0px 0px rgba(0, 0, 0, 0.0), 0 0 5px black;
}

/*Прайс*/

.price{
    max-width: 1200px;
    min-height: 620px;
    margin-top: 120px;
}
.price ul{
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    list-style: none; 
    max-width: 1200px;
    min-height: 450px;    
    padding: 0;
    margin-top: 35px;
}
.price ul li{
    box-sizing: border-box;
    max-width: 360px;
    width: 100%;
    min-height: 450px;
    padding-top: 40px;
    text-align: center;
    margin-right: 60px;
}
.price ul li:nth-child(3n){
    margin-right: 0px;
}
.price_headers{
    margin-top: 30px; 
    margin-bottom: 10px;
    font-weight: 700;   
}
.blue_border{
    border-top: 4px solid #007FFC;
}
.green_border{
    border-top: 4px solid #56CBAE;
}
.red_border{
    border-top: 4px solid #FA6770;
}
.blue_text{
    color: #007FFC;
}
.green_text{
    color: #56CBAE;
}
.red_text{
    color: #FA6770;
}
.price button{
    max-width: 180px;
    width: 100%;
    min-height: 50px; 
    border: 2px solid #16133E;
    border-radius: 24px;      
} 
.dark_button{
   background-color: #16133E;
   color: #FFF    
}
.white_button{
    background-color: #FFF;
    color: #16133E;
}

/*триал*/

.trial{
    box-sizing: border-box;
    max-width: 1200px;
    width: 100%;
    min-height: 380px;
    margin-top: 60px;
    padding-top: 100px;
    border-radius: 15px;
    background-image: url(../img/BG_Trial.jpg);
    background-repeat: no-repeat;
    background-size: cover;    
    color: #fff;
    text-align: center;
}
.trial button{
    width: 190px;
    height: 50px; 
    border: 2px solid #fff;
    border-radius: 23px;
    margin-top: 40px;
    margin-right: 20px;
    margin-left: 20px;
    background-color: #fff;
    color: #000;    
}
.trial .color_reverse{
    background-color: #007FFC;
    color: #FFF;
}

/*поле связи */

.contact_us{
    box-sizing: border-box; 
    width: 585px;
    height: 835px;
    margin: 100px auto;   
}
.contact_us input{
    width: 585px;
    height: 50px;
    border-radius: 4px;
    font-size: 16px;    
}
.contact_us input[type="checkbox"]{
    width: 18px;
    height: 18px;
    margin: 0px;
}
.contact_us textarea{
    width: 585px;
    height: 170px;
}
.contact_us h2{ 
    margin-bottom: 30px;
    font-size: 45px;
    text-align: center;   
}
.contact_us input[type="submit"]{
    width: 585px;
    height: 50px;
    margin: 20px auto;
    border: 2px solid #007FFC;
    border-radius: 4px;
    background-color: #007FFC;
    color: #FFF;
}
.contact_us p{
    text-align: center;
}
/*footer*/
.footer_style {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    box-sizing: border-box;
    max-width: 1440px;
    width: 100%;
    padding: 100px 100px;
    background-color: #16133e;
    color: #FFF;
}
.copyright{
    width: 100%;
    margin-top: 100px;
    text-align: center;
}
.footer_style .paragraph{
    margin: 0;
    font-size: 16px;
    font-weight: 400;
}
.footer_style h2{
    height: 32px;
    margin: 0px;
    margin-bottom: 5px;
    line-height: 20px;
}
.footer_style h3{
    height: 32px;
    margin-top: 0px;
    margin-bottom: 20px;
    line-height: 20px;
}
.footer_info{
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    vertical-align: top;
    box-sizing: border-box;
    max-width: 250px;
    margin: 0 50px;
}
.footer_img{ 
    display: flex;
    justify-content: space-between;
    list-style: none;
    max-width: 250px;  
    padding: 0px;
    margin: 0px;
}
.footer_links{
    margin-left: 50px;
}
.footer_links ul{
    display: flex;
    list-style: none;
    padding: 0;
    margin: 0px;
    margin-right: 70px;
}
.footer_links ul nav ul{ 
    display: flex;
    flex-direction: column; 
    padding: 0;
}
.footer_links ul nav ul li{
    margin-bottom: 20px; 
}

/*Модальное окно */

.modal_position{
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);    
}
.touch_block{
    width: 100%;
    height: 100%;
    background-color:rgba(0, 0, 0, 0.6);
}
.modal{
    width: 300px;
    min-height: 200px;
    padding: 20px;
    border-radius: 8px;
    background-color: #FFF;
    box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.6);
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.close{
    position: absolute;
    top: 20px;
    right: 20px;
    width: 22px;
    height: 22px;
    border: 0px;
    border-radius: 4px;
    cursor: pointer;
    background-color: #fff;
}
.close::before,
.close::after{
    position: absolute;
    top: 10px;
    right: 2px;
    width: 19px;
    height: 3px;
    background-color: rgb(61, 54, 54);
    content: '';
}
.close::after{
    transform: rotate(45deg);
}
.close::before{
    transform: rotate(-45deg);
}
.modal h2{
    margin: 0px;
    font-size: 24px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.modal p{
    font-size: 14px;
    margin: 20px 0px 0px 0px;
}
input[type="submit"] + p{
    margin: 0;
    text-align: center;
}
.modal label{    
    display: block;
    margin-top: 15px;
    font-size: 12px;
}
.modal input{ 
    width: 298px;
    height: 25px;
    border: 2px solid #16133E;
    border-radius: 4px;
}
.modal input[type="submit"]{
    width: 306px;
    min-height: 35px;
    margin-top: 30px;
    background-color: #16133E;
    color: #fff;
}

.modal_vision{
    display: none;
}

/*Настройка цветов/шрифтов*/

@font-face{
    font-family: Market Deco;
    src: url(Fonts/Market_Deco.ttf);
}
h1, h2{
    font-family: Market Deco;
}
a:link{
    text-decoration: none;
}
.a_ignore:link{ 
    color: #03c4a1;
    text-decoration: solid;
}
a:hover{    
    color: #F7BF55;
}
.service a{
    color: #000;
    transition: .2s linear;
}
.contact_us a{    
    color: #6ec7fa;
    text-decoration: solid;
    transition: .2s linear;
}
.service a{
    color: #000;
    transition: .2s linear;
}
.service a:visited{
    color: #03c4a1;
    transition: .2s linear;
}
footer a{
    color: #fff
}
a:visited:hover{
    color:#6ec7fa;
}
button{
    transition: .2s linear;
}
button:hover{
    background-color:#6ec7fa;
    border-color:#6ec7fa;    
}
input[type=submit] {
    transition: .02s linear;
}
input[type=submit]:hover {
    border-color: #6ec7fa;
    background-color: #6ec7fa;
    color: #FFF;
}
:required{
    border: 2px solid #FA6770;
}
textarea{
    resize: none;
}
a:visited{
    color: #03c4a1;
}

